--- a/src/output.css
+++ b/src/output.css
@@ -554,8 +554,20 @@ video {
   display: none;
 }
 
+.absolute {
+  position: absolute;
+}
+
 .relative {
   position: relative;
+}
+
+.left-1\/2 {
+  left: 50%;
+}
+
+.top-1\/2 {
+  top: 50%;
 }
 
 .z-10 {
@@ -570,6 +582,10 @@ video {
   z-index: 30;
 }
 
+.mb-1\.5 {
+  margin-bottom: 0.375rem;
+}
+
 .ml-\[-12px\] {
   margin-left: -12px;
 }
@@ -582,12 +598,32 @@ video {
   display: flex;
 }
 
+.hidden {
+  display: none;
+}
+
+.h-1 {
+  height: 0.25rem;
+}
+
+.h-1\/2 {
+  height: 50%;
+}
+
+.h-12 {
+  height: 3rem;
+}
+
 .h-16 {
   height: 4rem;
 }
 
-.h-3\/5 {
-  height: 60%;
+.h-2 {
+  height: 0.5rem;
+}
+
+.h-48 {
+  height: 12rem;
 }
 
 .h-6 {
@@ -598,12 +634,16 @@ video {
   height: 20rem;
 }
 
-.h-1\/2 {
-  height: 50%;
-}
-
 .min-h-screen {
   min-height: 100vh;
+}
+
+.w-10 {
+  width: 2.5rem;
+}
+
+.w-12 {
+  width: 3rem;
 }
 
 .w-16 {
@@ -618,6 +658,10 @@ video {
   width: 1rem;
 }
 
+.w-48 {
+  width: 12rem;
+}
+
 .w-6 {
   width: 1.5rem;
 }
@@ -626,14 +670,133 @@ video {
   width: 20rem;
 }
 
+.-translate-x-1\/2 {
+  --tw-translate-x: -50%;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.-translate-y-1\/2 {
+  --tw-translate-y: -50%;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
 .translate-x-1 {
   --tw-translate-x: 0.25rem;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.-rotate-45 {
+  --tw-rotate: -45deg;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
 .rotate-45 {
   --tw-rotate: 45deg;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+@keyframes line-1 {
+  0% {
+    transform: translate3d(0, 0, 0) rotate(0deg);
+  }
+
+  50% {
+    transform: translate3d(0, 10px, 0) rotate(0deg);
+  }
+
+  100% {
+    transform: translate3d(0, 10px, 0) rotate(45deg);
+  }
+}
+
+.animate-line-1 {
+  animation: line-1 0.7s cubic-bezier(0.4, 0, 0.2, 1) forwards;
+}
+
+@keyframes animate-line-1-rev {
+  0% {
+    transform: translate3d(0, 10px, 0) rotate(45deg);
+  }
+
+  50% {
+    transform: translate3d(0, 10px, 0) rotate(0deg);
+  }
+
+  100% {
+    transform: translate3d(0, 0, 0) rotate(0deg);
+  }
+}
+
+.animate-line-1-rev {
+  animation: animate-line-1-rev 0.7s cubic-bezier(0.4, 0, 0.2, 1) forwards;
+}
+
+@keyframes line-2 {
+  0% {
+    transform: scale(1);
+    opacity: 1;
+  }
+
+  100% {
+    transform: scale(0);
+    opacity: 0;
+  }
+}
+
+.animate-line-2 {
+  animation: line-2 0.7s cubic-bezier(0.4, 0, 0.2, 1) forwards;
+}
+
+@keyframes animate-line-2-rev {
+  0% {
+    transform: scale(0);
+    opacity: 0;
+  }
+
+  100% {
+    transform: scale(1);
+    opacity: 1;
+  }
+}
+
+.animate-line-2-rev {
+  animation: animate-line-2-rev 0.7s cubic-bezier(0.4, 0, 0.2, 1) forwards;
+}
+
+@keyframes line-3 {
+  0% {
+    transform: translate3d(0, 0, 0) rotate(0deg);
+  }
+
+  50% {
+    transform: translate3d(0, -10px, 0) rotate(0deg);
+  }
+
+  100% {
+    transform: translate3d(0, -10px, 0) rotate(135deg);
+  }
+}
+
+.animate-line-3 {
+  animation: line-3 0.7s cubic-bezier(0.4, 0, 0.2, 1) forwards;
+}
+
+@keyframes animate-line-3-rev {
+  0% {
+    transform: translate3d(0, -10px, 0) rotate(135deg);
+  }
+
+  50% {
+    transform: translate3d(0, -10px, 0) rotate(0deg);
+  }
+
+  100% {
+    transform: translate3d(0, 0, 0) rotate(0deg);
+  }
+}
+
+.animate-line-3-rev {
+  animation: animate-line-3-rev 0.7s cubic-bezier(0.4, 0, 0.2, 1) forwards;
 }
 
 .flex-row {
@@ -668,9 +831,9 @@ video {
   border-width: 1px;
 }
 
-.border-blue-500 {
-  --tw-border-opacity: 1;
-  border-color: rgb(59 130 246 / var(--tw-border-opacity));
+.bg-\[\#3FAF82\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(63 175 130 / var(--tw-bg-opacity));
 }
 
 .bg-white {
@@ -717,6 +880,12 @@ video {
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.shadow {
+  --tw-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 1px 3px 0 var(--tw-shadow-color), 0 1px 2px -1px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
 .shadow-md {
