--- a/src/output.css
+++ b/src/output.css
@@ -614,12 +614,24 @@ video {
   height: 3rem;
 }
 
+.h-14 {
+  height: 3.5rem;
+}
+
 .h-16 {
   height: 4rem;
 }
 
 .h-2 {
   height: 0.5rem;
+}
+
+.h-20 {
+  height: 5rem;
+}
+
+.h-4 {
+  height: 1rem;
 }
 
 .h-48 {
@@ -632,6 +644,10 @@ video {
 
 .h-80 {
   height: 20rem;
+}
+
+.h-full {
+  height: 100%;
 }
 
 .min-h-screen {
@@ -648,6 +664,10 @@ video {
 
 .w-16 {
   width: 4rem;
+}
+
+.w-20 {
+  width: 5rem;
 }
 
 .w-3 {
@@ -668,6 +688,10 @@ video {
 
 .w-80 {
   width: 20rem;
+}
+
+.w-full {
+  width: 100%;
 }
 
 .-translate-x-1\/2 {
@@ -695,108 +719,40 @@ video {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
-@keyframes line-1 {
+@keyframes sun-goes {
   0% {
-    transform: translate3d(0, 0, 0) rotate(0deg);
+    transform: translate(-100%, 250%) rotate(0deg);
   }
 
   50% {
-    transform: translate3d(0, 10px, 0) rotate(0deg);
+    transform: translate(200%, 0%) rotate(0deg);
   }
 
   100% {
-    transform: translate3d(0, 10px, 0) rotate(45deg);
+    transform: translate(450%, 230%) rotate(0deg);
   }
 }
 
-.animate-line-1 {
-  animation: line-1 0.7s cubic-bezier(0.4, 0, 0.2, 1) forwards;
+.animate-sun-goes {
+  animation: sun-goes 4s infinite;
 }
 
-@keyframes animate-line-1-rev {
+@keyframes sun-goes-down {
   0% {
-    transform: translate3d(0, 10px, 0) rotate(45deg);
+    opacity: 100;
   }
 
   50% {
-    transform: translate3d(0, 10px, 0) rotate(0deg);
+    opacity: 100;
   }
 
   100% {
-    transform: translate3d(0, 0, 0) rotate(0deg);
-  }
-}
-
-.animate-line-1-rev {
-  animation: animate-line-1-rev 0.7s cubic-bezier(0.4, 0, 0.2, 1) forwards;
-}
-
-@keyframes line-2 {
-  0% {
-    transform: scale(1);
-    opacity: 1;
-  }
-
-  100% {
-    transform: scale(0);
     opacity: 0;
   }
 }
 
-.animate-line-2 {
-  animation: line-2 0.7s cubic-bezier(0.4, 0, 0.2, 1) forwards;
-}
-
-@keyframes animate-line-2-rev {
-  0% {
-    transform: scale(0);
-    opacity: 0;
-  }
-
-  100% {
-    transform: scale(1);
-    opacity: 1;
-  }
-}
-
-.animate-line-2-rev {
-  animation: animate-line-2-rev 0.7s cubic-bezier(0.4, 0, 0.2, 1) forwards;
-}
-
-@keyframes line-3 {
-  0% {
-    transform: translate3d(0, 0, 0) rotate(0deg);
-  }
-
-  50% {
-    transform: translate3d(0, -10px, 0) rotate(0deg);
-  }
-
-  100% {
-    transform: translate3d(0, -10px, 0) rotate(135deg);
-  }
-}
-
-.animate-line-3 {
-  animation: line-3 0.7s cubic-bezier(0.4, 0, 0.2, 1) forwards;
-}
-
-@keyframes animate-line-3-rev {
-  0% {
-    transform: translate3d(0, -10px, 0) rotate(135deg);
-  }
-
-  50% {
-    transform: translate3d(0, -10px, 0) rotate(0deg);
-  }
-
-  100% {
-    transform: translate3d(0, 0, 0) rotate(0deg);
-  }
-}
-
-.animate-line-3-rev {
-  animation: animate-line-3-rev 0.7s cubic-bezier(0.4, 0, 0.2, 1) forwards;
+.animate-sun-goes-down {
+  animation: sun-goes-down 4s infinite;
 }
 
 .flex-row {
@@ -819,6 +775,10 @@ video {
   justify-content: center;
 }
 
+.overflow-hidden {
+  overflow: hidden;
+}
+
 .rounded {
   border-radius: 0.25rem;
 }
@@ -831,9 +791,29 @@ video {
   border-width: 1px;
 }
 
+.bg-\[\#272c34\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(39 44 52 / var(--tw-bg-opacity));
+}
+
 .bg-\[\#3FAF82\] {
   --tw-bg-opacity: 1;
   background-color: rgb(63 175 130 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#7DDFFC\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(125 223 252 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#F0DE75\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(240 222 117 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#FFEF00\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 239 0 / var(--tw-bg-opacity));
 }
 
 .bg-white {
