--- a/src/output.css
+++ b/src/output.css
@@ -586,6 +586,10 @@ video {
   margin-bottom: 0.375rem;
 }
 
+.ml-3 {
+  margin-left: 0.75rem;
+}
+
 .ml-\[-12px\] {
   margin-left: -12px;
 }
@@ -719,6 +723,34 @@ video {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
+@keyframes change-color-first {
+  0% {
+    background-color: white;
+  }
+
+  100% {
+    background-color: grey;
+  }
+}
+
+.animate-change-color-first {
+  animation: change-color-first 4s infinite;
+}
+
+@keyframes change-color-last {
+  0% {
+    background-color: grey;
+  }
+
+  100% {
+    background-color: white;
+  }
+}
+
+.animate-change-color-last {
+  animation: change-color-last 4s infinite;
+}
+
 @keyframes sun-goes {
   0% {
     transform: translate(-100%, 250%) rotate(0deg);
@@ -735,24 +767,6 @@ video {
 
 .animate-sun-goes {
   animation: sun-goes 4s infinite;
-}
-
-@keyframes sun-goes-down {
-  0% {
-    opacity: 100;
-  }
-
-  50% {
-    opacity: 100;
-  }
-
-  100% {
-    opacity: 0;
-  }
-}
-
-.animate-sun-goes-down {
-  animation: sun-goes-down 4s infinite;
 }
 
 .flex-row {
@@ -816,6 +830,11 @@ video {
   background-color: rgb(255 239 0 / var(--tw-bg-opacity));
 }
 
+.bg-black {
+  --tw-bg-opacity: 1;
+  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
+}
+
 .bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
@@ -872,4 +891,12 @@ video {
   --tw-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color), 0 2px 4px -2px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.\[clip-path\:polygon\(0\%_0\%\2c 100\%_100\%\2c 35\%_100\%\)\] {
+  clip-path: polygon(0% 0%,100% 100%,35% 100%);
+}
+
+.\[clip-path\:polygon\(50\%_0\%\2c 0\%_100\%\2c 100\%_100\%\)\] {
+  clip-path: polygon(50% 0%,0% 100%,100% 100%);
 }
